style.css
/* Basic Style */
.cover {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
}
.eisenhower-box {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
}

.eisenhower-box__img {
  width: 100%;
}

.eisenhower-box, 
.eisenhower-box__link {
  font-family: fantasy, cursive;
}

@media (max-width:768px) {
.eisenhower-box { text-align: center;
}
}
.to-do-section {
  display: block;
  width: 500px;
  margin: 0 auto 0;
}
.task__input,
.task__label,
.to-do-section__add-item-div__input-div__input {
  width: 56%;
  display: inline-block;
  flex-grow: 1
}
.to-do-section__add-item-div__input-div {
  display: flex;
}

#incomplete-tasks {
  margin:0;
  padding: 0px;
}

.task {
  list-style:none;
}

.to-do-header {
  list-style:none;
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

.to-do-section__add-item-div__input-div__input,
.task__checkbox-input,
.task__input {
  outline:none;
}

.task__edit-button,
.task__delete-button,
.to-do-section__add-item-div__input-div__button {
  outline:none;
  background: none;
  border: 0px;
  color: #888;
  font-size: 15px;
  width: 60px;
  font-family: Lato, sans-serif;
  cursor: pointer;
}

.task__edit-button:hover,
.task__delete-button:hover,
.to-do-section__add-item-div__input-div__button:hover {
  color: #3a3A3a;
}


/* Heading */

.to-do-section__add-item-div__label {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
  margin: 0;
  text-transform: uppercase;
}

.to-do-section__add-item-div__input-div__input,
.task__input {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  height: 21px;
  padding: 0 9px;
  border: 1px solid #ddd;
  background: #fff;
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;   
}

.task__input:focus {
  color: #333;
}

/* New Task */
.to-do-section__add-item-div__label {
  display: block;
  margin: 0 0 20px;
}

.to-do-section__add-item-div__input-div__input {
  width: 318px;
}

/* Task list */

.task {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
  
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.task__checkbox-input {
  margin: 0 10px; 
}

.task__label {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
}

.task__input {
  width: 226px
}

.task__delete-button__img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
}

.task__delete-button__img:hover {
  transform: rotateZ(0);
}

/* Completed */
#completed-tasks {
  padding-left: 0px;
}

#completed-tasks .task__label {
  text-decoration: line-through;
  color: #888;
}

/* Edit Task */
.task__input {
  display:none;
}

.edit-mode .task__input  {
  display:inline-block;
  width:224px;
}

.edit-mode .task__label {
  display:none;
}

